refactored accorSearchCarCalendar by creating the calendar class that i instanciate in the accorSearchBarCalendars + fixed the body overflow of the page Accor

--- a/scss/_base.scss
+++ b/scss/_base.scss
@@ -120,7 +120,8 @@ button {
       width: 100%;
     }
 
-    .bottom {}
+    .bottom {
+    }
   }
 
   &.hidden {
@@ -190,9 +191,9 @@ button {
   background-color: white;
   color: $accorMain;
   font-family: "SFPro";
+  overflow: auto;
   overflow-x: hidden;
-  min-height: 100vh;
-  min-height: 100svh;
+  height: auto;
 }
 
 // Debug
