--- a/scss/components/pageAccor/_accorCalendar.scss
+++ b/scss/components/pageAccor/_accorCalendar.scss
@@ -1,14 +1,12 @@
 .accorSearchBar__calendar-wrapper {
-  // display: none;
+  display: none;
   position: absolute;
   width: 666px;
   min-height: 100px;
   background-color: $backgroundColorGreyPage;
   border-radius: 16px;
   padding: 24px 16px 32px;
-  display: flex;
   justify-content: center;
-
   top: calc(100% + 32px);
   z-index: 1;
 
@@ -31,10 +29,8 @@
     /*   background: pink; */
     margin-bottom: 24px;
     color: $accorMain;
-    display: flex;
-    align-items: center;
-    justify-content: space-between;
     font-weight: 600;
+    text-align: center;
   }
 
   .cal-btn {
@@ -43,9 +39,13 @@
     background-color: rgba($accorMain, 0.24);
     border-radius: 24px;
     display: flex;
+    position: absolute;
+    top: 50%;
+    right: 16px;
     justify-content: center;
     align-items: center;
     transition: background-color 0.2s ease-out;
+    transform: translateY(-50%);
 
     &:hover {
       background-color: $accorMain;
@@ -57,8 +57,12 @@
     // height: 100%;
   }
 
-  .cal-btn.back img {
-    transform: rotate(180deg);
+  .cal-btn.back {
+    right: unset;
+    left: 16px;
+    img {
+      transform: rotate(180deg);
+    }
   }
 
   .cal_days,
@@ -115,6 +119,6 @@
     background: $accorMain;
     color: white;
     border-radius: 30px;
-    outline: 4px solid $accorMain;
+    outline: 3px solid $accorMain;
   }
 }
