--- a/scss/components/pageAccor/_accorCommon.scss
+++ b/scss/components/pageAccor/_accorCommon.scss
@@ -10,6 +10,10 @@
   font-weight: 600;
 }
 
+body {
+  overflow: auto;
+}
+
 section {
   margin-top: 120px;
 
